--- a/manga_mate/pubspec.yaml
+++ b/manga_mate/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.2
   auto_size_text: ^3.0.0
   like_button: ^2.0.5
+  flutter_screenutil: ^5.8.4
 
 dev_dependencies:
   flutter_test:
